[gd_scene load_steps=15 format=2]

[ext_resource path="res://themes/Default/ColoringBookButtonStyleHover.tres" type="StyleBox" id=1]
[ext_resource path="res://themes/Default/ColoringBookButtonStyleNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://themes/Default/ColoringBookButtonStylePressed.tres" type="StyleBox" id=3]
[ext_resource path="res://gui/Minigames/ColoringPages/cat-the-surfer-coloring-page.png" type="Texture" id=4]
[ext_resource path="res://gui/Minigames/DrawRegion.gd" type="Script" id=5]
[ext_resource path="res://gui/Minigames/ColoringBook.gd" type="Script" id=6]
[ext_resource path="res://gui/Minigames/Pen.gd" type="Script" id=7]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="ImageTexture" id=5]

[sub_resource type="Theme" id=6]
CheckBox/icons/checked = SubResource( 2 )
CheckBox/icons/radio_checked = SubResource( 3 )
CheckBox/icons/radio_unchecked = SubResource( 4 )
CheckBox/icons/unchecked = SubResource( 5 )
CheckBox/styles/hover = ExtResource( 1 )
CheckBox/styles/normal = ExtResource( 2 )
CheckBox/styles/pressed = ExtResource( 3 )

[sub_resource type="ButtonGroup" id=7]

[node name="ColoringBook" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
colors = PoolColorArray( 0.917647, 0.231373, 0.231373, 1, 1, 0.666667, 0.235294, 1, 0.992157, 0.980392, 0.305882, 1, 0.45098, 0.956863, 0.360784, 1, 0.262745, 0.972549, 0.921569, 1, 0.258824, 0.286275, 0.92549, 1, 0.619608, 0.2, 0.909804, 1, 0.94902, 0.345098, 0.854902, 1, 0.52549, 0.141176, 0.27451, 1, 0.596078, 0.266667, 0.164706, 1, 0.564706, 0.458824, 0.203922, 1, 0.333333, 0.592157, 0.32549, 1, 0.352941, 0.282353, 0.615686, 1, 1, 1, 1, 1, 0.482353, 0.482353, 0.482353, 1, 0.254902, 0.254902, 0.254902, 1 )

[node name="DrawRegion" type="Control" parent="."]
margin_left = 312.718
margin_top = 60.3212
margin_right = 962.718
margin_bottom = 610.321
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawViewport" type="Viewport" parent="DrawRegion"]
size = Vector2( 650, 550 )
transparent_bg = true
msaa = 1
usage = 0
render_target_v_flip = true
render_target_clear_mode = 1

[node name="Pen" type="Control" parent="DrawRegion/DrawViewport"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="PageBG" type="ColorRect" parent="DrawRegion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawTexture" type="TextureRect" parent="DrawRegion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.00012207
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColoringPage" type="TextureRect" parent="DrawRegion"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorGrid" type="GridContainer" parent="."]
margin_left = 198.926
margin_top = 61.4306
margin_right = 282.926
margin_bottom = 409.431
theme = SubResource( 6 )
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="CheckBox" parent="ColorGrid"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button2" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button3" type="CheckBox" parent="ColorGrid"]
margin_top = 44.0
margin_right = 40.0
margin_bottom = 84.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button4" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 84.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button5" type="CheckBox" parent="ColorGrid"]
margin_top = 88.0
margin_right = 40.0
margin_bottom = 128.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button6" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 88.0
margin_right = 84.0
margin_bottom = 128.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button7" type="CheckBox" parent="ColorGrid"]
margin_top = 132.0
margin_right = 40.0
margin_bottom = 172.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button8" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 132.0
margin_right = 84.0
margin_bottom = 172.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button9" type="CheckBox" parent="ColorGrid"]
margin_top = 176.0
margin_right = 40.0
margin_bottom = 216.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button10" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 176.0
margin_right = 84.0
margin_bottom = 216.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button11" type="CheckBox" parent="ColorGrid"]
margin_top = 220.0
margin_right = 40.0
margin_bottom = 260.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button12" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 220.0
margin_right = 84.0
margin_bottom = 260.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button13" type="CheckBox" parent="ColorGrid"]
margin_top = 264.0
margin_right = 40.0
margin_bottom = 304.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button14" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 264.0
margin_right = 84.0
margin_bottom = 304.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button15" type="CheckBox" parent="ColorGrid"]
margin_top = 308.0
margin_right = 40.0
margin_bottom = 348.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1

[node name="Button16" type="CheckBox" parent="ColorGrid"]
margin_left = 44.0
margin_top = 308.0
margin_right = 84.0
margin_bottom = 348.0
rect_min_size = Vector2( 40, 40 )
shortcut_in_tooltip = false
action_mode = 0
group = SubResource( 7 )
align = 1
[connection signal="draw" from="DrawRegion/DrawViewport/Pen" to="DrawRegion/DrawViewport/Pen" method="_on_draw"]
